<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thoughts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up_details">SignUpDetailsActivity</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm</string>
    <string name="label_gender">Sex</string>
    <string name="label_male">M</string>
    <string name="label_female">F</string>
    <string name="label_country">Country</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="hint_first_name">Anand</string>
    <string name="hint_last_name">Mohan</string>
    <string name="hint_email">anandm@mkcl.org</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm</string>
    <string name="description_search">Search</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_add">Add</string>
    <string name="description_edit">Edit</string>
    <string name="description_remove">Remove</string>
    <string name="description_save">Save</string>
    <string name="description_discard">Discard</string>
    <string name="no_thoughts">No thoughts!!!</string>
    
     <string name="title_activity_settings">Settings</string>
     
    <string name="pref_remember_me">Remember Me</string>
    <string name="pref_remember_me_summary">Remember user credentials.</string>
    
    <string name="pref_user_name">User name</string>
    <string name="pref_user_name_summary">User name to store</string>
    
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Password to store</string>
     <string name="anonymous">anonymous</string>
    
    <string-array name="countries">
        <item>India</item>
        <item>Pakistan</item>
        <item>China</item>
        <item>Bhutan</item>
        <item>Nepal</item>
    </string-array>

    <string name="label_sign_in">Sign In</string>
    <string name="hint_user_name">username</string>
    <string name="app_description_text">User Thoughts</string>
    <string name="title_activity_thought_list">ThoughtListActivity</string>
    <string name="label_user_name">User Name</string>
    <string name="title_activity_thought">ThoughtActivity</string>
    <string name="hint_thought">Your thoughts</string>
    <string name="label_remember_me">Remember</string>

</resources>