<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
     <CheckBoxPreference
        android:key="pref_remeber_me"
        android:title="@string/pref_remember_me"
        android:summary="@string/pref_remember_me_summary"
        android:defaultValue="false" />
     
     <PreferenceScreen android:dependency="pref_remeber_me">
         <EditTextPreference
             android:key="pref_user_name"
             android:title="@string/pref_user_name"
             android:summary="@string/pref_user_name_summary"
             android:defaultValue="@string/anonymous" />
         
         <EditTextPreference
             android:key="pref_password"
             android:title="@string/pref_password"
             android:summary="@string/pref_password_summary"
             android:defaultValue="@string/anonymous" />
         
     </PreferenceScreen>
     
     
</PreferenceScreen>
